<resources>
    <string name="app_name">CoziiAndroid</string>

    <!-- Login Fragment -->
    <string name="tv_login_title">Sign in to\nCozii Proptech</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forget_password">Forget password?</string>
    <string name="login_username_hint">Email address</string>
    <string name="login_password_hint">Password</string>

    <!-- Register Fragment -->
    <string name="tv_registration_title">Get Started.</string>
    <string name="tv_registration_second_title">Live more.\nLess hassle.</string>
    <string name="tv_registration_description">Enter your first name and last name\nor login with a social account</string>
    <string name="tv_registration_second_description">Enter your email address and\npassword or login with a social\naccount</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_step_one">Step 1 of 2</string>
    <string name="register_email_hint">Email Address</string>
    <string name="register_password_hint">Password</string>
    <string name="register_reenter_password_hint">Re-enter Password</string>
    <string name="register_step_two">Step 2 of 2</string>
    <string name="tv_register_agreement">I agree with the Terms and Conditions and Privacy Statements.</string>

    <!-- Reset Password Fragment -->
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_desc">Enter the email address you used for\nthis account to reset your password.</string>
    <string name="reset_hint_email">Email address</string>
    <string name="button_send_email">Send Email</string>

    <!-- Reset Password Deeplink Fragment -->
    <string name="reset_password_deeplink_title">Enter new password</string>
    <string name="reset_password_hint">Password</string>
    <string name="reset_password_reenter_hint">Re-enter your password</string>
    <string name="button_set_password">Set Password</string>

    <!-- Reset Password Success Fragment -->
    <string name="reset_password_success_title">Done!</string>
    <string name="reset_password_success_desc">Your password has been changed!</string>
    <string name="button_sign_in">Sign In</string>

    <!-- Verify Email Fragment -->
    <string name="verify_email_title">Verify your email</string>
    <string name="verify_email_desc">Please enter the 4 digit code sent to\nyourmail@example.com</string>
    <string name="resend_code">Resend Code</string>
    <string name="button_confirm">Confirm</string>
    <string name="change_email">Change Email</string>
    <string name="verfied_title">Verified!</string>
    <string name="verified_desc">Great! You have successfully\nverified the account</string>
    <string name="button_next">Next</string>

    <!-- Tenant Home Fragment -->
    <string name="alert_verification_title">3 Steps left</string>
    <string name="alert_desc">We ask everyone for a few details before\nrelease all of the features of the app</string>
    <string name="tenant_salutation">What would you like to do?</string>
    <string name="reminders_text">Reminder</string>
    <string name="suggested_rentals_text">Suggest listing for rent</string>
    <string name="home_title">Home</string>
    <string name="profile_title">Profile</string>

    <!-- Tenant Home Fragment -->
    <string name="profile_type">Tenant</string>


    <!-- Onboarding screens -->
    <string name="on_board_landing_title">Welcome to Cozii Proptech.\nSmart property manager in\nreal time. </string>
    <string name="on_board_landing_salutation">You are</string>
    <string name="on_board_landing_tenant_desc">Connect with landlord, request\nand track maintenance request</string>
    <string name="on_board_landing_landlord_desc">Receive and monitor repairs, receive\npayments, advertise your properties</string>
    <string name="on_board_landing_handyman_desc">Reach more customers, get new work\norders and increase your income</string>
    <string name="on_board_back_button">Back</string>
    <string name="on_board_next_button">Next</string>

    <!-- Onboarding Fragment -->
    <string-array name="on_boarding_tenant_salutation">
        <item>As a Tenant,</item>
        <item>As a Tenant,</item>
        <item>As a Tenant,</item>
        <item>Almost Done.</item>
    </string-array>

    <string-array name="on_boarding_landlord_salutation">
        <item>As a Landlord,</item>
        <item>As a Landlord,</item>
        <item>As a Landlord,</item>
        <item>Almost Done.</item>
    </string-array>

    <string-array name="on_boarding_handyman_salutation">
        <item>As a Handyman,</item>
        <item>As a Handyman,</item>
        <item>As a Handyman,</item>
        <item>Almost Done.</item>
    </string-array>

    <string-array name="on_boarding_tenant_titles">
        <item>you can request repairs\nfrom the landlord with cozii.</item>
        <item>you can book a handyman\nor service expert with cozii.</item>
        <item>you can pay rent and\nutilities with cozii.</item>
        <item>We ask every tenant for a\nfew details before enjoy\nthe new lifestyle. </item>
    </string-array>

    <string-array name="on_boarding_landlord_titles">
        <item>you can receive and\nschedule maintenance\nrequest from tenants with\ncozii.</item>
        <item>you can book a handyman\nand monitor repairs on the\ngo with cozii.</item>
        <item>you can collect you rent\npayment with cozii even\nmore easier.</item>
        <item>We ask every landlord for\na few details before enjoy\nthe new lifestyle.</item>
    </string-array>

    <string-array name="on_boarding_handyman_titles">
        <item>you can get new job\nrequests with a single click.</item>
        <item>you can be in charge of your\nschedule and stay\norganized.</item>
        <item>you can reach more\ncustomer and get paid\nfast with direct deposit.</item>
        <item>We ask every handyman\nfor a few details before\nenjoy the new lifestyle.</item>
    </string-array>

    <!-- Document Selection Fragment -->
    <string name="document_selection_title">Choose the type of document\nyou wish to upload.</string>
    <string name="document_selection_desc">This document must have the credentials of\nthe app user and will be verified for\nauthentication.</string>
    <string name="document_selection_toolbar_title">Select Document Type</string>
    <string name="document_upload_title">Upload your documents\nby a simple click</string>
    <string name="document_upload_desc">By uploading a document, you agreed to\nallow Cozii Technologies verify the\nauthenticity of information contained in the\nsubmitted document.</string>

    <!-- Document Info Landing Fragment -->
    <string name="document_info_title">Join us in providing a safe and\nsecure community experience for\nall users.</string>
    <string name="document_verify_now">VERIFY NOW</string>
    <string name="no_document_text">I don’t have my ID with me now</string>
    <string name="document_info_landing_toolbar_title">ID Verification</string>
    <string name="button_submit">Submit</string>

    <!-- Document Success Fragment -->
    <string name="id_verification_success_title">Awesome!\nYou’re being verified.</string>
    <string name="id_verification_success_desc">We received your data and will\nverify it.</string>
    <string name="button_continue">Continue</string>

    <!-- Edit Profile -->
    <string name="profile_name">Name</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="profile_email">Email</string>
    <string name="email_hint">Email address</string>
    <string name="profile_phone">Phone Number</string>
    <string name="phone_hint">Phone number</string>
    <string name="profile_residential_address">Residential Address</string>
    <string name="suite_number_hint">Suite / Apartment #</string>
    <string name="street_number_hint">Street #</string>
    <string name="street_name_hint">Street name</string>
    <string name="city_hint">City / Town</string>
    <string name="province_hint">Province</string>
    <string name="postal_code_hint">Postal code / Zip code</string>
    <string name="button_save">Save</string>
    <string name="edit_profile_toolbar_title">Edit Profile</string>

    <!-- Validations-->
    <string name="invalid_email">Invalid email id</string>
    <string name="empty_email">Email Id cannot be empty!</string>
    <string name="empty_password">Password cannot be empty!</string>
    <string name="invalid_password">Password is too short!</string>

    <string name="empty_first_name">First Name cannot be empty!</string>
    <string name="invalid_first_name">First Name is too short!</string>
    <string name="empty_last_name">Last Name cannot be empty!</string>
    <string name="invalid_last_name">Last Name is too short!</string>
    <string name="non_matching_passwords">Passwords doesn\'t match</string>
    <string name="empty_phone">Phone Number cannot be empty!</string>
    <string name="invalid_phone">Phone Number is too short!</string>
    <string name="empty_street">Street Name cannot be empty!</string>
    <string name="invalid_street">Street Name is too short!</string>
    <string name="empty_city">City Name cannot be empty!</string>
    <string name="invalid_city">City Name is too short!</string>
    <string name="empty_province">Province Name cannot be empty!</string>
    <string name="invalid_province">Province Name is too short!</string>
    <string name="empty_postal_code">Postal Code cannot be empty!</string>
    <string name="invalid_postal_code">Postal Code is too short!</string>

    <!-- Payment-->
    <string name="card_number">Card number</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="card_holder_name">Card Holder name</string>
    <string name="card_holder_name_hint">Enter your name</string>
    <string name="card_expiration">Expiration</string>
    <string name="card_expiration_hint">MM/YY</string>
    <string name="card_cvv">CVV</string>
    <string name="card_cvv_hint">123</string>
    <string name="card_country">Country</string>
    <string name="card_postal_code">Postal Code</string>
    <string name="card_postal_code_hint">A1A A1A</string>
    <string name="add_card">ADD CARD</string>
    <string name="add_bank_info_title">Fill in your bank account information</string>
    <string name="add_bank_info_desc">Our app needs your most up to date bank\naccount information to deposit your rental\nincome from tenants.</string>
    <string name="bank_info_title">Bank Information</string>
    <string name="account_owner_hint">Name of Account Owner</string>
    <string name="branch_number_hint">Branch Number</string>
    <string name="account_number_hint">Account Number</string>
    <string name="institution_number_hint">Institution Number</string>
    <string name="bank_info_save">SAVE</string>
    <string name="payment_defaults">Payment defaults</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="promotions">Promotions</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="promotion_code">Promotion Code</string>
    <string name="promo_code_hint">Enter promotion code</string>
    <string name="submit_promo_code">SUBMIT</string>

    <string name="payment_method_toolbar_title">Payment Method</string>
    <string name="add_payment_toolbar_title">Add Payment</string>
    <string name="bank_info_toolbar_title">Bank Information</string>
    <string name="promo_code_toolbar_title">Add Promo Code</string>

    <string name="api_key">AIzaSyDbJCIWQ7c59lJBYhUXALFGHmu0TZdtFew</string>

    <string name="charset">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXY Z</string>

</resources>
